Added query methods to subscription service.
